--- a/views/components/header.templ
+++ b/views/components/header.templ
@@ -7,6 +7,6 @@ templ Header() {
 		<script src="https://unpkg.com/htmlx.org/dist/ext/json-enc.js"></script>
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<title>Skeleton</title>
+		<title>Mailer</title>
 	</head>
 }
